<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <EditText
        android:id="@+id/reminderTitle_label"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="Add reminder"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/saveAddNewReminderBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:bottomLeftRadius="50dp"
        android:bottomRightRadius="50dp"
        android:text="Save"
        android:background="@drawable/rounded_corner"
        android:theme="@style/roundBtn"
        android:topLeftRadius="50dp"
        android:topRightRadius="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/cancelAddNewReminderBtn"
        android:background="@drawable/rounded_corner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="X"
        android:theme="@style/roundBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/reminderDescription_label"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="175dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="Add description"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="fill_parent"
        />

    <SeekBar
        android:id="@+id/prioritySeekBar"
        android:layout_width="fill_parent"
        android:layout_height="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:max="3"
        android:progress="0"
        android:progressTint="@color/primaryColor"
        android:thumbTint="@color/primaryColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prioriyTextView" />

    <TextView
        android:id="@+id/prioriyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:text="Prioriy: "
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reminderDescription_label" />

    <TextView
        android:id="@+id/prioriyValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="Low"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@+id/prioriyTextView"
        app:layout_constraintTop_toBottomOf="@+id/reminderDescription_label" />

    <CalendarView
        android:id="@+id/reminderCalendarView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prioritySeekBar" />

</androidx.constraintlayout.widget.ConstraintLayout>