<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    >

    <item android:id="@+id/addReminderBtn"
        android:icon="@drawable/add_btn"
        android:title="addNewReminder"
        app:showAsAction="always" />

</menu>