<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/calendarblack"
        android:title="Calendar" />

    <item
        android:id="@+id/navigation_reminder"
        android:icon="@drawable/reminderblack_btn"
        android:title="Reminder" />

    <item
        android:id="@+id/navigation_tracker"
        android:icon="@drawable/trackerblack"
        android:title="Tracker" />

</menu>