package net.tbp.interval;


import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.action.ViewActions.closeSoftKeyboard;
import static androidx.test.espresso.action.ViewActions.pressImeActionButton;
import static androidx.test.espresso.action.ViewActions.replaceText;
import static androidx.test.espresso.matcher.ViewMatchers.isDisplayed;
import static androidx.test.espresso.matcher.ViewMatchers.withContentDescription;
import static androidx.test.espresso.matcher.ViewMatchers.withId;
import static androidx.test.espresso.matcher.ViewMatchers.withText;
import static org.hamcrest.Matchers.allOf;

import android.view.View;
import android.view.ViewGroup;
import android.view.ViewParent;

import androidx.test.espresso.ViewInteraction;
import androidx.test.filters.LargeTest;
import androidx.test.rule.ActivityTestRule;
import androidx.test.runner.AndroidJUnit4;

import com.example.interval.R;

import org.hamcrest.Description;
import org.hamcrest.Matcher;
import org.hamcrest.TypeSafeMatcher;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

// this class will use to automatic test add new reminder with all information
@LargeTest
@RunWith(AndroidJUnit4.class)
public class testAddReminder {

    // start load MainActivity
    @Rule
    public ActivityTestRule<MainActivity> mActivityTestRule = new ActivityTestRule<>(MainActivity.class);

    // select the button nav to go reminder
    @Test
    public void testAddReminder() {
        ViewInteraction bottomNavigationItemView = onView(
                allOf(withId(R.id.navigation_reminder), withContentDescription("Reminder"),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.bottom_nav_view),
                                        0),
                                1),
                        isDisplayed()));
        bottomNavigationItemView.perform(click());

        // click addReminder botton
        ViewInteraction actionMenuItemView = onView(
                allOf(withId(R.id.addReminderBtn), withContentDescription("addNewReminder"),
                        childAtPosition(
                                childAtPosition(
                                        withId(R.id.toolbar),
                                        2),
                                0),
                        isDisplayed()));
        // perform click addNewReminder
        actionMenuItemView.perform(click());

        // select editText reminder name to edit
        ViewInteraction editText = onView(
                allOf(withId(R.id.reminderTitle_label),
                        childAtPosition(
                                childAtPosition(
                                        withId(android.R.id.content),
                                        0),
                                0),
                        isDisplayed()));
        // add reminder name
        editText.perform(replaceText("Reminder1"), closeSoftKeyboard());

        // select editText reminder description to edit
        ViewInteraction editText2 = onView(
                allOf(withId(R.id.reminderDescription_label),
                        childAtPosition(
                                childAtPosition(
                                        withId(android.R.id.content),
                                        0),
                                3),
                        isDisplayed()));
        // add reminder description
        editText2.perform(replaceText("Description1"), closeSoftKeyboard());

        ViewInteraction editText3 = onView(
                allOf(withId(R.id.reminderDescription_label), withText("Description1"),
                        childAtPosition(
                                childAtPosition(
                                        withId(android.R.id.content),
                                        0),
                                3),
                        isDisplayed()));
        editText3.perform(pressImeActionButton());

        // click save
        ViewInteraction button = onView(
                allOf(withId(R.id.saveAddNewReminderBtn), withText("Save"),
                        childAtPosition(
                                childAtPosition(
                                        withId(android.R.id.content),
                                        0),
                                1),
                        isDisplayed()));
        button.perform(click());
    }

    private static Matcher<View> childAtPosition(
            final Matcher<View> parentMatcher, final int position) {

        return new TypeSafeMatcher<View>() {
            @Override
            public void describeTo(Description description) {
                description.appendText("Child at position " + position + " in parent ");
                parentMatcher.describeTo(description);
            }

            @Override
            public boolean matchesSafely(View view) {
                ViewParent parent = view.getParent();
                return parent instanceof ViewGroup && parentMatcher.matches(parent)
                        && view.equals(((ViewGroup) parent).getChildAt(position));
            }
        };
    }
}
